Fix squished search on mobile, closes #81

--- a/src/css/_search.scss
+++ b/src/css/_search.scss
@@ -18,7 +18,6 @@
     font-weight: bold;
   }
 
-
   #results {
     margin-top: 1em;
     -webkit-transition: all 0.3s ease;
@@ -45,11 +44,15 @@
     border-top: 1px solid $blue-accent;
     padding: 10px 0px 20px 0px;
 
+    @media all and (max-width: 768px) {
+      width: 100%;
+    }
+
     &:hover {
       border-top-color: $bright-tan;
     }
 
-    &:nth-child(4n+4){
+    &:nth-child(4n + 4) {
       margin-right: 0;
     }
 
